# Radar

./: .clang-format  .clang-tidy  .gitignore  .gitmessage  .gitmodules  BUILD_LINUX.md  HardwareReceiver 模块化重构修复指南.md  LICENSE  PRIVATE_DOCS_PROTECTION.md  README.md  test_base_receiver.cpp  临时中转文件.md  跨平台开发环境配置.md
.github/: ai-interface-compliance.md  copilot-instructions.md  pull_request_template.md
.github/instructions/: general-docs.instructions.md  implementation-rules.instructions.md  interface-rules.instructions.md  module-readme.instructions.md
.github/prompts/: 01_generate_module_header.prompt.md  02_fix_and_review.prompt.md  03_generate_unit_tests.prompt.md  04_performance_optimize.prompt.md  05_review_checklist.prompt.md  06_format-document.prompt.md
.github/workflows/: ci.yml
docs/: README.md  全局通用的广义模板.md  文档结构总览.md
docs/01_项目设计/: MVP系统设计文档.md  README.md  文档结构总览.md
docs/01_项目设计/01_顶层设计/: 01_系统架构总览.md  02_核心设计原则.md  04_文档优化说明.md  04_雷达数据处理系统：从目标到实现的设计决策.md
docs/01_项目设计/01_项目设计/: 00_总体架构设计.md  01_需求分析与目标.md  02_技术选型与平台.md  03_系统架构总览.md  04_核心设计原则.md  99_架构决策记录.md
docs/01_项目设计/02_模块设计/: 00_模块设计文档基准模板.md  00_模板文件.md  01_DataReceiver问题汇总.md  01_数据接收模块设计.md  02_SignalProcessor问题汇总.md  02_信号处理模块设计.md  03_DataProcessor问题汇总.md  03_数据处理模块设计.md  04_DisplayController问题汇总.md  04_数据网关模块设计.md  04_显控接口模块设计.md  051_.md  05_Task问题汇总.md  05_任务调度器设计.md  06_配置管理模块设计.md  07_日志服务设计.md  07_日志监控模块设计.md  08_监控服务设计.md  09_显控终端应用设计.md  100Q_整理问题.md  100_工作流.md  99_模块集成策略.md  README.md  数据接收模块设计.md
docs/01_项目设计/03_并发与调度/: 01_并发架构设计.md  02_任务调度策略.md  03_线程模型设计.md  04_同步机制设计.md  05_GPU资源管理.md  06_性能优化策略.md  README.md
docs/01_项目设计/04_数据架构/: 00_数据架构总览与原则-已弃用.md  00_数据架构总览与原则.md  01_数据流设计.md  02_数据结构定义.md  02_核心数据结构.md  03_内存管理与所有权.md  03_数据格式规范.md  04_序列化与网络协议.md  05_数据传输协议.md  05_数据完整性与可靠性.md  README.md
docs/01_项目设计/05_接口设计/: 00_接口设计总览.md  01_模块接口规范.md  02_外部接口设计.md  03_配置接口设计.md  04_监控接口设计.md  05_接口版本管理.md  06_事件接口规范.md  README.md  本模块开发指南.md
docs/01_项目设计/06_测试设计/: 00_测试策略总览.md  01_单元测试规范.md  01_测试策略.md  02_单元测试计划.md  02_集成测试方案.md  03_系统与端到端测试方案.md  03_集成测试计划.md  04_性能测试方案.md  04_性能测试计划.md  05_可靠性测试计划.md  05_测试环境与工具链.md  06_可靠性与恢复性测试方案.md  06_测试数据管理.md  07_测试报告与缺陷管理规范.md  README.md
docs/01_项目设计/07_质量保障/: 01_编码规范.md  02_代码评审流程.md  03_质量度量标准.md  04_缺陷管理流程.md  05_发布质量控制.md  README.md
docs/01_项目设计/08_项目管理/: 01_开发计划.md  02_团队协作规范.md  03_风险管理计划.md  (+3 more)
docs/02_开发指南/: GitHub-Copilot个人指令配置指南.md  GitHub-Copilot快速设置.md  GitHub_Copilot_Personal_Instructions_Guide.md  GitHub_Copilot个人指令设置指南.md  Git完整使用指南.md  Git快速入门与团队协作规范.md  交互设计说明.md  工程实践指南大纲.md  系统架构入门指南.md
docs/03_技术规范/: 01_Mermaid可视化设计指南.md  Mermaid可视化设计指南.md  Mermaid图表规范.md  README.md  代码编写规范.md  接口同步解决方案.md  文档与设计规范.md  文档编写规范.md  显示控制单元接口与通信协议-V2.5.doc  架构与模块化开发规范.md  模块化开发规范.md  编码规范与代码风格指南.md  设计文档编写规范.md
docs/04_历史版本/: MVP设计文档_详细版.md  系统设计_v1.md  系统设计_v2.md  系统设计_v3.md
docs_private/: 私人文档文件夹方案.md
docs_private/00_快速开始/: README.md  工作流程图.md  文档智能索引.md  检查清单.md
docs_private/01_AI交互规范/: README.md  prompt模板库.md  上下文管理策略.md  意图澄清协议.md  核心交互原则.md  错误处理流程.md
docs_private/02_编码规范/: 代码审查要点.md  代码风格指南.md  命名约定.md  注释和文档规范.md  设计模式应用.md
docs_private/03_开发指南/: README.md  依赖管理策略.md  文件创建顺序.md  模块开发流程.md  系统构建顺序.md  组件实现指南.md
docs_private/04_技术栈配置/: Git完整使用指南.md  README.md  开发环境配置.md  技术栈清单.md  构建系统配置.md  硬件环境要求.md  第三方库集成.md
docs_private/06_自动化模板/: README.md
docs_private/07_AI工作流/: 交付验证清单.md  代码生成流程.md  依赖识别规则.md  方案设计流程.md  架构耦合分析.md  需求分析流程.md
docs_private/09_最佳实践/: README.md  代码重构指南.md  反模式警示.md  常见问题解答.md  性能优化指南.md  调试技巧.md
docs_private/10_元信息/: README.md  引用规范.md  术语表.md  版本控制.md
docs_private/11_README/: 02_README.md  07_README.md
patch/: 文档结构总览.md
radar_mvp/: CMakeLists.txt  README.md  build_linux.sh  build_wsl.ps1  debug_test.cpp  vcpkg-configuration.json  vcpkg.json
radar_mvp/configs/: config.yaml
radar_mvp/include/application/: radar_application.h
radar_mvp/include/common/: config_manager.h  error_codes.h  interfaces.h  logger.h  types.h
radar_mvp/include/modules/: cuda_fft_processor.h  data_processor.h  data_receiver.h  display_controller.h  task_scheduler.h
radar_mvp/include/modules/data_receiver/: README.md  data_receiver_base.h  data_receiver_factory.h  data_receiver_implementations.h  data_receiver_statistics.h  hardware_receiver.h  simulation_receiver.h
radar_mvp/include/modules/display_controller/: display_controller_base.h  display_controller_factory.h  display_controller_implementations.h  display_controller_statistics.h
radar_mvp/include/modules/task_scheduler/: task_scheduler.h  task_scheduler_factory.h  task_scheduler_implementations.h  task_scheduler_interfaces.h  task_scheduler_types.h
radar_mvp/scripts/: build_linux.sh  build_windows.ps1  migrate_to_vcpkg.ps1  setup_linux_dependencies.sh  update_vcpkg_baseline.ps1
radar_mvp/src/: CMakeLists.txt  main.cpp
radar_mvp/src/application/: radar_application.cpp
radar_mvp/src/common/: config_manager.cpp  error_codes.cpp  logger.cpp
radar_mvp/src/modules/data_processor/: base_processor.cpp  cpu_processor.cpp  cuda_fft_processor.cpp  gpu_processor.cpp  processor_factory.cpp
radar_mvp/src/modules/data_receiver/: base_receiver.cpp  file_receiver.cpp  hardware_receiver.cpp  receiver_factory.cpp  simulation_receiver.cpp  udp_receiver.cpp
radar_mvp/src/modules/display_controller/: console_display_controller.cpp  display_controller_base.cpp  file_display_controller.cpp  hybrid_display_controller.cpp  network_display_controller.cpp
radar_mvp/src/modules/task_scheduler/: task_scheduler_factory.cpp  task_scheduler_impl.cpp  task_scheduler_queues.cpp  task_scheduler_specialized.cpp  task_scheduler_types.cpp
radar_mvp/tests/: CMakeLists.txt
radar_mvp/tests/unit_tests/: data_receiver_test.cpp  logger_test.cpp  test_cuda_fft_processor.cpp
radar_mvp/tests/unit_tests/config_manager/: config_manager_test.cpp
radar_mvp/tests/unit_tests/data_processor/: cpu_processor_test.cpp
radar_mvp/tests/unit_tests/data_receiver/: CMakeLists.txt  base_receiver_test.cpp
scripts/: generate_design_docs.ps1  git-radar-management.ps1
(+77 files in other folders)
